# PyGnome

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTORS.rst  Install_without_conda.rst  Installing.rst  InstallingWithAnaconda.md  InstallingWithAnaconda.rst  LICENSE.txt  NormalInstall.md  NormalInstall.rst  README.md  README.rst  aggscript.py  conda_compare.py  conda_packages.txt  conda_requirements.txt  conda_requirements_build.txt  conda_requirements_dev.txt  conda_requirements_docs.txt  conda_requirements_py3.txt  conda_requirements_test.txt  create_conda_env.py  customizing.html  docker-compose.yml  dockerfile  dockerfile-docs  dump.rdb  env_obj.html  genindex.html  index.html  installing.html  introduction.html  logging.html  model.html  objects.inv  pixi.toml  (+16 more)
py_gnome/: .gitignore  CMakeLists.txt  MANIFEST.in  README.rst  build_anaconda.sh  conda_requirements.txt  conda_requirements_build.txt  conda_requirements_docs.txt  conda_requirements_test.txt  create_conda_env.py  environment.yml  log_config.json  pyGnome_rqmts.txt  pyproject.toml  re_link_for_anaconda.py  relink.sh  requirements.txt  script.py  set_for_anaconda.sh  setup.cfg  setup.py  setup2.py  setup_legacy.py  setup_old.py  setup_smalls.py  test_setup.py  ubuntu_requirements.txt
py_gnome/cmake/: Readme.txt
py_gnome/conda_recipe/: build.sh  meta.yaml
py_gnome/cygnome/: .gitignore  basic_types.pyx  c_gnome.cpp  c_gnome.h  c_gnome.pyx  c_gnome_defs.pxi  c_mylist.pxi  cats_mover.pxi  cats_mover.pyx  current_mover.pxi  cy_basic_types.pyx  cy_cats_mover.pxi  cy_cats_mover.pyx  cy_date_time.pyx  cy_netcdf_mover.pyx  cy_ossm_time.pxd  cy_ossm_time.pyx  cy_wind_mover.pyx  date_time.pxd  date_time.pxi  grid_vel.pxi  le_list.pxi  map.pxi  mem_utils.pxd  mem_utils.pxi  model.pxi  model.pyx  mover.pxi  movers.pxd  netcdf_mover.pxi  ossm_time.pxd  ossm_time.pxi  ossm_time.pyx  random_mover.pxi  random_mover.pyx  reformat.sh  shio_time.pxi  type_defs.pxd  type_defs.pxi  utils.pxd  (+3 more)
py_gnome/cygnome/codeFiles/: CDOGDialogs.cpp  CLASSES.H  CMap2.h  CROSS.H  CarbonUtil.cpp  Earl.h  EditCDOGProfilesDialog.h  GENUTIL.CPP  GENUTIL.H  GEOMETRY.CPP  GridCurMover.cpp  GridVel.cpp  GridVel.h  LayerUtils.cpp  MYFILES.CPP  MYRANDOM.CPP  MakeDagTree.cpp  MakeMovie.cpp  NetCDFWindMover.cpp  OSSM.H  PtCurMover.cpp  PtCurMover.h  SYSTEM.CPP  Shio.h  ShioCurrent1.cpp  ShioCurrent2.cpp  ShioHeight.cpp  StringFunctions.cpp  TCurrentMover.cpp  TriCurMover.cpp  TriCurMover.h  TypeDefs.h  UTILS.CPP  Uncertainty.h  macdef.prefix  my_build_list.h
py_gnome/documentation/: .gitignore  Makefile  build_gh_pages.sh  conf.py  customizing.rst  index.rst  installing.rst  introduction.rst  logging.rst  readme.txt  reference.rst  serialization.rst  structure.rst  tech_notes.rst  units.rst
py_gnome/documentation/_static/: readme.txt
py_gnome/documentation/_templates/: readme.txt
py_gnome/documentation/docstring_document/: README.txt
py_gnome/documentation/dostring_document/: README.txt
py_gnome/documentation/env_obj/: env_obj_examples.rst  env_obj_intro.rst  environment_objects.rst  examples.ipynb  glossary.rst  index.rst  staggered_sine_channel.nc  terms.rst
py_gnome/documentation/scripting/: environment.rst  index.rst  maps.rst  mixedlayer_release.rst  movers.rst  outputters.rst  property_objects.rst  sample_scripts.rst  scripting_intro.rst  spills.rst  utilities.rst  weatherers.rst
py_gnome/documentation/source/: conf.py  index.rst  installing.rst  introduction.rst  links.rst  structure.rst  tech_notes.rst  units.rst
py_gnome/documentation/sphinx_docs/: Makefile  build_me.sh  conf.py  customizing.rst  index.rst  installing.rst  introduction.rst  logging.rst  model.rst  reference.rst  sample_scripts.rst  scripting.rst  serialization.rst  structure.rst  tutorial_2.rst  tutorials.rst  units.rst
py_gnome/gnome/: __init__.py  array_types.py  basic_types.py  constants.py  element_type.py  element_types.py  elements.py  environment.py  exceptions.py  gnomeobject.py  greenwich.py  land_check.py  map.py  model.py  movers.py  multi_model_broadcast.py  netcdf_outputter.py  outputter.py  outputters.py  renderer.py  simple_mover.py  sources.py  spill.old.py  spill.py  spill2.py  spill_container.py  weather.py  wind_mover.py
py_gnome/gnome/cy_gnome/: .gitignore  __init__.py  current_movers.pxd  cy_basic_types.pyi  cy_basic_types.pyx  cy_cats_mover.pyx  cy_component_mover.pyx  cy_current_mover.pxd  cy_current_mover.pyx  cy_currentcycle_mover.pxd  cy_currentcycle_mover.pyx  cy_date_time.pyx  cy_grid.pxd  cy_grid.pyx  cy_grid_curv.pyx  cy_grid_map.pyx  cy_mover.pxd  (+27 more)
py_gnome/lib_gnome/: ADCPMover_c.cpp  ADCPMover_c.h  ADCPTimeValue_c.h  CATSMover3D_c.cpp  CATSMover_c.cpp  CATSMover_c.h  CMYLIST.H  CMap2.cpp  CMap2.h  CMapLayer_c.cpp  ClassID_c.h  CompFunctions.cpp  CompFunctions.h  ComponentMover_c.cpp  ComponentMover_c.h  CompoundMap_c.h  CompoundMover_c.cpp  CurrentCycleMover_c.h  CurrentMover_c.cpp  CurrentMover_c.h  DagTree.cpp  DagTree.h  DagTreeIO.cpp  DagTreeIO.h  ExportSymbols.h  GENDEFS.H  GEOMETR2.CPP  GEOMETRY.H  GridCurMover_c.cpp  GridCurMover_c.h  GridCurrentMover_c.cpp  GridCurrentMover_c.h  GridMapUtils.cpp  GridMapUtils.h  GridMap_c.cpp  GridMap_c.h  GridWindMover_c.h  GridWndMover_c.cpp  GridWndMover_c.h  IceWindMover_c.cpp  (+64 more)
py_gnome/old_stuff/: 00-README.txt  setup.py  setup2.py  setup_smalls.py  spill.py
py_gnome/py_gnome_conda_recipe/: meta.yaml
py_gnome/py_ugrid/: README.txt  setup.py
py_gnome/python_gnome.egg-info/: PKG-INFO  SOURCES.txt
py_gnome/scripts/: .gitignore  README.rst  __init__.py  build_gif.py  readme.txt  run_all.py  script_runner.py  simple_script.py
py_gnome/tests/: .gitignore  LMiss.bna  LMissText.txt  MapBounds_Island.bna  README.txt  TwoLEs_script.py  conftest.py  draw_map_test.py  geodesic_calcs.py  long_island_script.py  lower_mississippi_script.py  pytest.ini  remove_future.py  script.py  test_MapClass.py  test_WindMover.py  test_imports.py  timing_script.py
py_gnome/utility_scripts/: 00-README.rst  oil_budget_from_savefile.py  plot_dispersion.ipynb
(+3516 files in other folders)
