[metadata]
name = pyGnome
version = attr: gnome.__version__
author = Gnome team at NOAA/ORR/ERD
author_email = orr.gnome@noaa.gov
description = GNOME (General NOAA Operational Modeling Environment)
              is the modeling tool the Office of Response and
              Restoration's (OR&R) Emergency Response Division uses to
              predict the possible route, or trajectory, a pollutant
              might follow in or on a body of water, such as in an
              oil spill. It can also be used as a customizable general particle tracking code.
long_description = file: README.rst, LICENSE.txt
keywords = "oilspill, modeling, particle-tracking"
license = CC0-1.0
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: C++
    Programming Language :: Cython
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Oceanography


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
# install_requires =
#     requests
#     importlib-metadata; python_version<"3.8"

[options.package_data]
gnome = 'data/yeardata/*',
        'outputters/sample.b64',
        'weatherers/platforms.json'

[options.entry_points]
console_scripts =
    executable-name = my_package.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
